pipe line checking

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,5 +18,7 @@
   </li>
 </ul>
 
-<p>All is Done</p>
+<p>All is Done Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui ratione velit ad ea amet magnam mollitia dolores eos ducimus vero officiis numquam, earum non molestias optio. Reprehenderit dicta neque earum.</p>
+
+<h1>Pipe line is created</h1>
 
